<resources>
    <string name="app_name">SAKATO</string>
    <string name="sakato">SAKATO</string>
    <string name="username">Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="register">Register!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="retur_dan_konfirmasi_penerimaan">Retur dan Konfirmasi Penerimaan</string>
    <string name="bendum_kppn010_gmail_com">bendum.kppn010@gmail.com</string>
    <string name="sprint_kemenkeu_go_id">sprint.kemenkeu.go.id</string>
    <string name="pengelolaan_rekening">Pengelolaan Rekening</string>
    <string name="rekonsiliasi_laporan_keuangan">Rekonsiliasi Laporan Keuangan</string>
    <string name="lpj">LPJ</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_paragraph">Welcome to CIRCLE NODE, your number one source for all things SAKATO. We\'re dedicated to giving you the best of Sakator, with a focus on Development Aplikasi, App Easy For User.</string>
    <string name="privacy_policy_paragraph">CIRCLE NODE operates the https://sikaping.deadline.id/ website, which provides the SERVICE.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="kode_satker">Kode Satker</string>
    <string name="titik_dua">:</string>
    <string name="nama_satker">Nama Satker</string>
    <string name="bendahara">BENDAHARA</string>
    <string name="KPA">KPA</string>
    <string name="ppk">PPK</string>
    <string name="ppspm">PPSPM</string>
    <string name="pejabat_perbendaharaan">Pejabat Perbendaharaan</string>
    <string name="e_mail">E-mail</string>
    <string name="no_telp">No. Telp</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="pagu_dan_realisasi_belanja_satker">Pagu dan Realisasi Belanja Satker</string>
    <string name="per_maret_2021">per ... Maret 2021</string>
    <string name="target_realisasi_belajar_standar">Target Realisasi Belajar Standar</string>
    <string name="tahun_2021">Tahun 2021</string>
    <string name="other">Other</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jabatan">Jabatan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="monitoring_tolakan">Monitoring Tolakan</string>
    <string name="spm">SPM</string>
    <string name="kontrak">Kontrak</string>
    <string name="supplier">Supplier</string>
    <string name="gaji_lainnya">Gaji Lainnya</string>
    <string name="xxxxx">xxxxx</string>
    <string name="ls_nonkontraktual">LS NonKontraktual</string>
    <string name="gaji_induk">Gaji Induk</string>
    <string name="antrian_online">Antrian Online</string>
    <string name="antrian">ANTRIAN</string>
    <string name="tanda_seru">!</string>
    <string name="selamat_datang_di_sakato_sistem_aplikasi_kabar_antrian_dan_tolakan">Selamat datang di SAKATO (Sistem Aplikasi Kabar, Antrian, dan Tolakan).</string>
    <string name="copyright">© 2021</string>
    <string name="sakato_kppn_padang">SAKATO - KPPN PADANG</string>
    <string name="hai">Hai,</string>
    <string name="nama_satker2">(Nama Satker)</string>
    <string name="fitur">Fitur</string>
</resources>