<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_main">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_pejabat_perbendaharaan"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/pejabat_perbendaharaan" />

        <item
            android:id="@+id/nav_monitoring_tolakan"
            android:icon="@drawable/ic_baseline_desktop_mac_24"
            android:title="@string/monitoring_tolakan" />
    </group>

    <group>
        <item android:title="@string/other"
            android:enabled="false">
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_other">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
    </group>

</menu>